new-section-list

--- a/portfolio.html
+++ b/portfolio.html
@@ -86,7 +86,7 @@
 									height="300" />
 
 								<div class="bottom-frame">
-									<h3 class="new-section">Banking App Interface Concept</h3>
+									<h3 class="new-section-list">Banking App Interface Concept</h3>
 									<p class="description">App</p>
 								</div>
 							</a>
@@ -100,7 +100,7 @@
 									height="300" />
 
 								<div class="bottom-frame">
-									<h3 class="new-section">Cashless Payment</h3>
+									<h3 class="new-section-list">Cashless Payment</h3>
 									<p class="description">Marketing</p>
 								</div>
 							</a>
@@ -114,7 +114,7 @@
 									width="360"
 									height="300" />
 								<div class="bottom-frame">
-									<h3 class="new-section">Meditation App</h3>
+									<h3 class="new-section-list">Meditation App</h3>
 									<p class="description">App</p>
 								</div>
 							</a>
@@ -128,7 +128,7 @@
 									width="360"
 									height="300" />
 								<div class="bottom-frame">
-									<h3 class="new-section">Taxi Service</h3>
+									<h3 class="new-section-list">Taxi Service</h3>
 									<p class="description">Marketing</p>
 								</div>
 							</a>
@@ -142,7 +142,7 @@
 									width="360"
 									height="300" />
 								<div class="bottom-frame">
-									<h3 class="new-section">Screen Illustrations</h3>
+									<h3 class="new-section-list">Screen Illustrations</h3>
 									<p class="description">Design</p>
 								</div>
 							</a>
@@ -156,7 +156,7 @@
 									width="360"
 									height="300" />
 								<div class="bottom-frame">
-									<h3 class="new-section">Online Courses</h3>
+									<h3 class="new-section-list">Online Courses</h3>
 									<p class="description">Marketing</p>
 								</div>
 							</a>
@@ -170,7 +170,7 @@
 									width="360"
 									height="300" />
 								<div class="bottom-frame">
-									<h3 class="new-section">Instagram Stories Concept</h3>
+									<h3 class="new-section-list">Instagram Stories Concept</h3>
 									<p class="description">Design</p>
 								</div>
 							</a>
@@ -184,7 +184,7 @@
 									width="360"
 									height="300" />
 								<div class="bottom-frame">
-									<h3 class="new-section">Organic Food</h3>
+									<h3 class="new-section-list">Organic Food</h3>
 									<p class="description">Web Site</p>
 								</div>
 							</a>
@@ -199,7 +199,7 @@
 									height="300" />
 
 								<div class="bottom-frame">
-									<h3 class="new-section">Fresh Coffee</h3>
+									<h3 class="new-section-list">Fresh Coffee</h3>
 									<p class="description">Web Site</p>
 								</div>
 							</a>
