--- a/portfolio.html
+++ b/portfolio.html
@@ -78,7 +78,7 @@
 
 					<ul class="menu-set">
 						<li class="project-image-caption">
-							<a>
+							<a href="">
 								<img
 									src="./images/img-1-1.jpg"
 									alt="screenshots of Banking App Interface Concept"
@@ -86,13 +86,15 @@
 									height="300" />
 
 								<div class="bottom-frame">
-									<h3 class="new-section-list">Banking App Interface Concept</h3>
+									<h3 class="new-section-list">
+										Banking App Interface Concept
+									</h3>
 									<p class="description">App</p>
 								</div>
 							</a>
 						</li>
 						<li class="project-image-caption">
-							<a>
+							<a href="">
 								<img
 									src="./images/img-2-1.jpg"
 									alt="A phone that scans the QR code"
@@ -107,7 +109,7 @@
 						</li>
 
 						<li class="project-image-caption">
-							<a>
+							<a href="">
 								<img
 									src="./images/img-3-1.jpg"
 									alt="Meditation app advertising on laptop and phone screen "
@@ -121,7 +123,7 @@
 						</li>
 
 						<li class="project-image-caption">
-							<a>
+							<a href="">
 								<img
 									src="./images/img-4-3.jpg"
 									alt="photo of the interior of the car with the driver"
@@ -135,7 +137,7 @@
 						</li>
 
 						<li class="project-image-caption">
-							<a>
+							<a href="">
 								<img
 									src="./images/img-5-1.jpg"
 									alt="graphics showing different wallpapers for phone with moon theme"
@@ -149,7 +151,7 @@
 						</li>
 
 						<li class="project-image-caption">
-							<a>
+							<a href="">
 								<img
 									src="./images/img-6-1.jpg"
 									alt="girl in orange sweater"
@@ -163,7 +165,7 @@
 						</li>
 
 						<li class="project-image-caption">
-							<a>
+							<a href="">
 								<img
 									src="./images/img-7-1.jpg"
 									alt="graphics showing various Instagram Stories Concept"
@@ -177,7 +179,7 @@
 						</li>
 
 						<li class="project-image-caption">
-							<a>
+							<a href="">
 								<img
 									src="./images/img-8-1.jpg"
 									alt="woman with shopping bag"
@@ -191,7 +193,7 @@
 						</li>
 
 						<li class="project-image-caption">
-							<a>
+							<a href="">
 								<img
 									src="./images/img-9-1.jpg"
 									alt="barista creating a pattern on coffee "
